infra/kubernetes/cluster-01/apps/media/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
